# pjecz-hercules-cli

./: README.md  prueba.csv  pyproject.toml
cli/: app.py
cli/commands/: cmd_autoridades.py  cmd_edictos.py  cmd_openai.py  cmd_sentencias.py  cmd_usuarios.py
lib/: authentications.py  exceptions.py  pdf_tools.py
pjecz_hercules_cli/commands/: cmd_autoridades.py  cmd_distritos.py  cmd_edictos.py  cmd_openai.py  cmd_sentencias.py  cmd_usuarios.py
pjecz_hercules_cli/dependencies/: authentications.py  pdf_tools.py
